[package]
name = "backendplatform_rust_api"
version = "0.1.0"
edition = "2021"
default-run = "backendplatform_rust_api"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "rustls-tls-native-roots"] }
redis = { version = "0.25", features = ["tokio-comp", "json"] }
thiserror = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "request-id"] }
anyhow = "1.0"
dashmap = "6.1"
maxminddb = "0.24"
hdrhistogram = "7.5"
deadpool-redis = "0.23.0"
deadpool = "0.13.0"
deadpool-runtime = "0.3.1"

